Add optional `flynt` dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,8 @@ pygments.lexers =
     lint_description = darker.highlighting.lexers:DescriptionLexer
 
 [options.extras_require]
+flynt =
+    flynt>=0.76
 isort =
     isort>=5.0.1
 color =
@@ -53,6 +55,7 @@ test =
     airium>=0.2.3
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     defusedxml>=0.7.1
+    flynt>=0.76
     isort>=5.0.1
     pygments
     pytest>=6.2.0
