--- a/mypy.ini
+++ b/mypy.ini
@@ -79,6 +79,9 @@ warn_return_any = False
 [mypy-defusedxml.*]
 ignore_missing_imports = True
 
+[mypy-flynt.*]
+ignore_missing_imports = True
+
 [mypy-isort.*]
 ignore_missing_imports = True
 
